--- a/css/index.css
+++ b/css/index.css
@@ -134,8 +134,14 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 h1 {
-  color: white;
+  color: black;
+  font-size: 1.5rem;
   font-family: "Righteous", cursive;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+}
+h2 {
+  font-size: 1.4rem;
+  font-weight: bolder;
 }
 .container {
   width: 100%;
@@ -144,29 +150,169 @@ h1 {
   height: 100%;
 }
 header {
-  background: #875f9a;
+  background: #ec7357;
   display: flex;
   justify-content: space-between;
-  padding: 2%;
+  padding: 1%;
+  text-align: center;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+}
+header img {
+  padding-left: 10px;
+  width: 140px;
 }
 header nav {
   width: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 header nav a {
+  padding: 0 2%;
   text-decoration: none;
   color: white;
 }
 header nav a:hover {
   text-decoration: underline;
 }
-.top-content {
-  height: 600px;
+footer {
+  height: 70px;
+  background: #434341a3;
+}
+footer .mini-nav {
+  text-align: center;
+  padding: 2%;
+}
+footer .mini-nav a {
+  text-decoration: none;
+  padding: 0 2%;
+  color: white;
+}
+footer a {
+  text-decoration: none;
+  text-align: center;
+}
+footer p {
+  font-size: 0.8rem;
+  text-align: center;
+  color: black;
+}
+main h1 {
+  background: #ec7357;
+  color: white;
+  padding: 2% 0;
+  padding-left: 2%;
+  width: 100%;
+  z-index: 1;
+}
+main .top-content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(120, 120, 120, 0.084), rgba(120, 120, 120, 0.9)), url("https://images.unsplash.com/photo-1516750548995-3db798a6f427?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-  background-size: cover;
+}
+main .top-content .overlay-cont {
+  width: 100%;
+  padding: 20% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main .top-content .overlay-cont h1 {
+  color: black;
+  text-align: center;
+  background: none;
+  box-shadow: none;
+}
+main .top-content .overlay-cont p {
+  padding-left: 100px;
+}
+main .top-content .overlay-cont button {
+  border: 1px solid black;
+  margin: 8%;
+  padding: 3%;
+  border-radius: 10px;
+  color: white;
+  background: #94c9a9;
+  font-size: 1.3rem;
+}
+main .top-content .why-cont {
+  width: 90%;
+  background: white;
+  margin-bottom: 3%;
+}
+main .top-content .why-cont .box {
+  padding: 2% 0;
+  margin: 3% 0;
+}
+main .top-content .why-cont .box h2 {
+  padding: 2% 5%;
+  font-size: 1.5rem;
+}
+main .top-content .why-cont .box p {
+  padding: 2% 5%;
+}
+main .top-content .why-cont .cont1 {
+  transform: skewY(-2deg);
+  background: #94c9a9;
+}
+main .top-content .why-cont .cont1 .problem {
+  transform: skewY(2deg);
+}
+main .top-content .why-cont .cont2 {
+  transform: skewY(5deg);
+  background: #f4d06f;
+}
+main .top-content .why-cont .cont2 .problem2 {
+  transform: skewY(-5deg);
+}
+main .top-content .why-cont .cont3 {
+  background: #777da7;
+  transform: skewY(-4deg);
+}
+main .top-content .why-cont .cont3 .problem3 {
+  transform: skewY(4deg);
+}
+main .features h1 {
+  width: 100%;
+  z-index: 1;
+}
+main .features .feat-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
+  color: black;
+  margin: 5% 0;
+}
+main .features .feat-cont .fea-box {
+  padding: 3%;
+  width: 60%;
+  margin: 3% 0;
+  background: white;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .features .feat-cont .fea-box .mask {
+  color: #777da7;
+}
+main .features .feat-cont .fea-box .globe {
+  color: #94c9a9;
+}
+main .features .feat-cont .fea-box .lemon {
+  color: #f4d06f;
+}
+main .features .feat-cont .fea-box h2,
+main .features .feat-cont .fea-box p {
+  padding: 3%;
+}
+main .features .feat-cont .fea-box hr {
+  width: 100%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
