--- a/less/global.less
+++ b/less/global.less
@@ -6,8 +6,14 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 h1 {
-  color: white;
+  color: black;
+  font-size: 1.5rem;
   font-family: "Righteous", cursive;
+  box-shadow: @shadow;
+}
+h2 {
+  font-size: 1.4rem;
+  font-weight: bolder;
 }
 .container {
   width: 100%;
