--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,10 @@
-@phone: ~"(min-width: 500px)";
-@tablet: ~"(min-width: 800px)";
+@tablet: ~"(min-width: 500px)";
+@desktop: ~"(min-width: 800px)";
 
-@bg-color: #875f9a;
-@bg-lite: #be90d4;
+// @bg-color: #875f9a;
+// @bg-color: #207ec4;
+@bg-color: #ec7357;
+// @bg-lite: #be90d4;
+@bg-lite: #94c9a9;
+@shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+@shadow-box: 0 8px 30px rgba(0, 0, 0, 0.12);
