--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,7 @@
 footer {
-  height: 70px;
+  height: 10%;
   background: #434341a3;
+  padding-bottom: 2%;
 
   .mini-nav {
     text-align: center;
