--- a/less/global.less
+++ b/less/global.less
@@ -20,4 +20,11 @@ h2 {
   max-width: 500px;
   margin: 0 auto;
   height: 100%;
+
+  @media @tablet {
+    max-width: 800px;
+  }
+  @media @desktop {
+    max-width: 1300px;
+  }
 }
