--- a/less/header.less
+++ b/less/header.less
@@ -17,6 +17,12 @@ header {
     .flex-set();
     justify-content: space-around;
     align-items: center;
+    @media @tablet {
+      width: 40%;
+    }
+    @media @desktop {
+      width: 30%;
+    }
     a {
       padding: 0 2%;
       text-decoration: none;
