Updating the About Us page.

--- a/less/project.less
+++ b/less/project.less
@@ -25,6 +25,9 @@ main {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      @media @desktop {
+        background-position: 0 20%;
+      }
       a {
         position: relative;
         left: 160px;
