--- a/css/about.css
+++ b/css/about.css
@@ -177,6 +177,16 @@ header nav {
   justify-content: space-around;
   align-items: center;
 }
+@media (min-width: 500px) {
+  header nav {
+    width: 40%;
+  }
+}
+@media (min-width: 800px) {
+  header nav {
+    width: 30%;
+  }
+}
 header nav a {
   padding: 0 2%;
   text-decoration: none;
@@ -208,14 +218,7 @@ footer p {
   text-align: center;
   color: black;
 }
-main .mono h1 {
-  font-size: 2rem;
-  box-shadow: none;
-}
-main .img-grid {
-  width: 100%;
-}
-main .img-grid h1 {
+main h1 {
   background: #ec7357;
   color: white;
   padding: 2% 0;
@@ -223,24 +226,159 @@ main .img-grid h1 {
   width: 100%;
   z-index: 1;
 }
+main .background {
+  width: 100%;
+  min-height: 400px;
+  background-repeat: no-repeat;
+  background: url(https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80) center / cover;
+  padding: 15% 0;
+}
+main .background .mono {
+  background: rgba(220, 220, 220, 0.8);
+  width: 60%;
+  margin: 0 auto;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+  padding: 0 5%;
+  padding-bottom: 2%;
+}
+@media (min-width: 800px) {
+  main .background .mono {
+    width: 70%;
+  }
+}
+main .background .mono h1 {
+  font-size: 2rem;
+  box-shadow: none;
+  padding: 2% 0;
+  background: none;
+  color: black;
+}
+main .img-grid {
+  width: 100%;
+}
+main .img-grid h2 {
+  font-size: 1.3rem;
+  padding: 2%;
+  align-items: center;
+}
+@media (min-width: 500px) {
+  main .img-grid h2 {
+    font-size: 1.5rem;
+  }
+}
 main .img-grid .people {
-  margin: 3% 0;
+  margin: 0 auto;
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
+}
+@media (min-width: 500px) {
+  main .img-grid .people {
+    width: 100%;
+    margin-top: 3%;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 }
 main .img-grid .people .person-box {
-  margin: 3% 0;
+  margin-bottom: 5%;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 90%;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
 }
+@media (min-width: 500px) {
+  main .img-grid .people .person-box {
+    width: 45%;
+  }
+}
+@media (min-width: 800px) {
+  main .img-grid .people .person-box {
+    width: 30%;
+    margin-bottom: 3%;
+  }
+}
+main .img-grid .people .person-box:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
 main .img-grid .people .person-box img {
-  display: inline-block;
-  width: 80%;
-  border-radius: 50%;
+  display: block;
+  width: 100%;
+  padding: 2% 0;
+  border-radius: 10px;
+}
+main .img-grid .people .person-box .overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #008cba;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.5s ease;
+  border-radius: 10px;
+}
+main .img-grid .people .person-box .overlay .text-content {
+  white-space: nowrap;
+  color: white;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+main .img-grid .people .person-box .overlay .text-content h2 {
+  padding: 2% 0;
+}
+main .img-grid .people .person-box .overlay .text-content .contact-btns {
+  padding: 10% 0;
+}
+main .img-grid .people .person-box .overlay .text-content .contact-btns i {
+  padding: 0 1%;
+}
+main .img-grid .people .person-box .brian,
+main .img-grid .people .person-box .nicholas {
+  background-color: #f4d06f;
+}
+main .img-grid .people .person-box .kayla,
+main .img-grid .people .person-box .shiva {
+  background-color: #777da7;
+}
+main .img-grid .people .person-box .lee,
+main .img-grid .people .person-box .brett {
+  background-color: #94c9a9;
+}
+main .contact {
+  width: 95%;
+  margin: 3% auto;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+  padding: 0 5%;
+  padding-bottom: 2%;
+}
+main .contact h1 {
+  font-size: 2rem;
+  box-shadow: none;
+  padding: 2% 0;
+  background: none;
+  color: black;
+}
+main .contact h2 {
+  padding: 2% 0;
+}
+main .contact p {
+  padding-bottom: 2%;
 }
