--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,11 @@ main .top-content .background-cont {
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 800px) {
+  main .top-content .background-cont {
+    background-position: 0 20%;
+  }
+}
 main .top-content .background-cont a {
   position: relative;
   left: 160px;
