--- a/less/project-about.less
+++ b/less/project-about.less
@@ -1,37 +1,161 @@
 main {
-  .mono {
-    h1 {
-      font-size: 2rem;
-      box-shadow: none;
+  h1 {
+    .h1-style();
+  }
+  .background {
+    width: 100%;
+    min-height: 400px;
+    background-repeat: no-repeat;
+    background: url(https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80)
+      center/cover;
+    padding: 15% 0;
+    .mono {
+      background: rgba(220, 220, 220, 0.8);
+      width: 60%;
+      margin: 0 auto;
+      box-shadow: @shadow-box;
+      padding: 0 5%;
+      padding-bottom: 2%;
+      @media @desktop {
+        width: 70%;
+      }
+      h1 {
+        font-size: 2rem;
+        box-shadow: none;
+        padding: 2% 0;
+        background: none;
+        color: black;
+      }
     }
   }
 
   .img-grid {
     width: 100%;
-    h1 {
-      .h1-style();
+    h2 {
+      font-size: 1.3rem;
+      padding: 2%;
+      align-items: center;
+      @media @tablet {
+        font-size: 1.5rem;
+      }
     }
     .people {
-      margin: 3% 0;
+      margin: 0 auto;
+      margin-top: 5%;
       .flex-set();
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      width: 90%;
+      @media @tablet {
+        width: 100%;
+        margin-top: 3%;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        align-items: center;
+      }
 
       .person-box {
-        margin: 3% 0;
+        margin-bottom: 5%;
+        position: relative;
         .flex-set();
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 70%;
+        width: 90%;
         box-shadow: @shadow-box;
+
+        @media @tablet {
+          width: 45%;
+        }
+        @media @desktop {
+          width: 30%;
+          margin-bottom: 3%;
+        }
+        &:hover .overlay {
+          bottom: 0;
+          height: 100%;
+        }
         img {
-          display: inline-block;
-          width: 80%;
-          border-radius: 50%;
+          display: block;
+          width: 100%;
+          padding: 2% 0;
+          border-radius: 10px;
+        }
+
+        .overlay {
+          position: absolute;
+          bottom: 100%;
+          left: 0;
+          right: 0;
+          background-color: #008cba;
+          overflow: hidden;
+          width: 100%;
+          height: 0;
+          transition: 0.5s ease;
+          border-radius: 10px;
+
+          .text-content {
+            white-space: nowrap;
+            color: white;
+            position: absolute;
+            overflow: hidden;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            .flex-set();
+            flex-direction: column;
+            text-align: center;
+            h2 {
+              padding: 2% 0;
+            }
+            .contact-btns {
+              padding: 10% 0;
+              a {
+                color: white;
+
+                i {
+                  padding: 0 1%;
+                }
+              }
+            }
+          }
+        }
+        .brian,
+        .nicholas {
+          background-color: @bg-yellow;
+        }
+        .kayla,
+        .brett {
+          background-color: @bg-purple;
+        }
+        .lee,
+        .shiva {
+          background-color: @bg-lite;
         }
       }
+    }
+  }
+  .contact {
+    width: 95%;
+    margin: 3% auto;
+    box-shadow: @shadow-box;
+    padding: 0 5%;
+    padding-bottom: 2%;
+    h1 {
+      font-size: 2rem;
+      box-shadow: none;
+      padding: 2% 0;
+      background: none;
+      color: black;
+    }
+    h2 {
+      padding: 2% 0;
+    }
+    p {
+      padding-bottom: 2%;
     }
   }
 }
