--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,9 @@
 // @bg-color: #207ec4;
 @bg-color: #ec7357;
 // @bg-lite: #be90d4;
+@bg-yellow: #f4d06f;
+@bg-purple: #777da7;
+
 @bg-lite: #94c9a9;
 @shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
 @shadow-box: 0 8px 30px rgba(0, 0, 0, 0.12);
