--- a/less/header.less
+++ b/less/header.less
@@ -13,7 +13,7 @@ header {
     width: 140px;
   }
   nav {
-    width: 50%;
+    width: 60%;
     .flex-set();
     justify-content: space-around;
     align-items: center;
@@ -24,11 +24,14 @@ header {
       width: 30%;
     }
     a {
-      padding: 0 2%;
+      padding: 4%;
       text-decoration: none;
       color: white;
+      font-size: 1rem;
       &:hover {
-        text-decoration: underline;
+        background: white;
+        color: @bg-color;
+        padding: 4%;
       }
     }
   }
