--- a/less/project.less
+++ b/less/project.less
@@ -28,11 +28,11 @@ main {
       @media @desktop {
         background-position: 0 20%;
       }
-      a {
-        position: relative;
-        left: 160px;
-        top: 110px;
-      }
+      // a {
+      //   position: relative;
+      //   left: 160px;
+      //   top: 110px;
+      // }
       .overlay-cont {
         width: 60%;
         padding: 3% 0;
@@ -60,6 +60,9 @@ main {
           color: white;
           background: @bg-lite;
           font-size: 1.3rem;
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
     }
