Added in some params for a mixin.

--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,6 @@
 header {
   background: @bg-color;
-  .flex-set();
+  .flex-set(row);
   justify-content: space-between;
   padding: 1%;
   text-align: center;
@@ -14,7 +14,7 @@ header {
   }
   nav {
     width: 60%;
-    .flex-set();
+    .flex-set(row);
     justify-content: space-around;
     align-items: center;
     @media @tablet {
