--- a/less/project.less
+++ b/less/project.less
@@ -11,8 +11,7 @@ main {
 
   .top-content {
     width: 100%;
-    .flex-set();
-    flex-direction: column;
+    .flex-set(column);
     justify-content: center;
     align-items: center;
     .background-cont {
@@ -21,8 +20,7 @@ main {
       background: url("https://media.gettyimages.com/photos/waitress-taking-orders-to-people-at-a-restaurant-picture-id506828094?k=6&m=506828094&s=612x612&w=0&h=gs_KmsQsI8DtJUR2-0Zdkp-ZCXKTIDDSkEUbonFJDJI=")
         center/cover;
       background-repeat: no-repeat;
-      .flex-set();
-      flex-direction: column;
+      .flex-set(column);
       justify-content: center;
       align-items: center;
       @media @desktop {
@@ -36,8 +34,7 @@ main {
       .overlay-cont {
         width: 60%;
         padding: 3% 0;
-        .flex-set();
-        flex-direction: column;
+        .flex-set(column);
         justify-content: center;
         align-items: center;
         background: rgba(220, 220, 220, 0.8);
@@ -76,8 +73,7 @@ main {
         width: 100%;
         padding-right: 3%;
         padding-left: 0;
-        .flex-set();
-        flex-direction: column;
+        .flex-set(column);
         margin-bottom: 0;
       }
       .box {
@@ -172,8 +168,7 @@ main {
       z-index: 1;
     }
     .feat-cont {
-      .flex-set();
-      flex-direction: column;
+      .flex-set(column);
       align-items: center;
       // background: #f7f7f7;
       background: white;
@@ -183,8 +178,7 @@ main {
         margin: 0 auto;
         width: 100%;
         padding: 0 3%;
-        .flex-set();
-        flex-direction: row;
+        .flex-set(row);
         justify-content: space-between;
         flex-wrap: wrap;
       }
@@ -196,8 +190,7 @@ main {
         background: white;
 
         box-shadow: @shadow-box;
-        .flex-set();
-        flex-direction: column;
+        .flex-set(column);
         align-items: center;
 
         @media @desktop {
