--- a/css/index.css
+++ b/css/index.css
@@ -162,6 +162,7 @@ h2 {
 header {
   background: #ec7357;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   padding: 1%;
   text-align: center;
@@ -174,6 +175,7 @@ header img {
 header nav {
   width: 60%;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
