--- a/less/project-about.less
+++ b/less/project-about.less
@@ -42,8 +42,7 @@ main {
     .people {
       margin: 0 auto;
       margin-top: 5%;
-      .flex-set();
-      flex-direction: column;
+      .flex-set(column);
       justify-content: space-between;
       align-items: center;
       width: 90%;
@@ -59,8 +58,7 @@ main {
       .person-box {
         margin-bottom: 5%;
         position: relative;
-        .flex-set();
-        flex-direction: column;
+        .flex-set(column);
         justify-content: center;
         align-items: center;
         width: 90%;
@@ -103,8 +101,7 @@ main {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            .flex-set();
-            flex-direction: column;
+            .flex-set(column);
             text-align: center;
             h2 {
               padding: 2% 0;
