--- a/css/about.css
+++ b/css/about.css
@@ -162,18 +162,28 @@ h2 {
 header {
   background: #ec7357;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   padding: 1%;
+  align-items: center;
   text-align: center;
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 370px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1%;
+    align-content: center;
+  }
 }
 header img {
   padding-left: 10px;
   width: 140px;
 }
 header nav {
-  width: 60%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -181,7 +191,7 @@ header nav {
 }
 @media (min-width: 500px) {
   header nav {
-    width: 40%;
+    width: 44%;
   }
 }
 @media (min-width: 800px) {
@@ -190,15 +200,26 @@ header nav {
   }
 }
 header nav a {
-  padding: 4%;
+  white-space: nowrap;
+  padding: 1% 3%;
   text-decoration: none;
   color: white;
   font-size: 1rem;
 }
+@media (min-width: 370px) {
+  header nav a {
+    padding: 5%;
+  }
+}
 header nav a:hover {
   background: white;
   color: #ec7357;
-  padding: 4%;
+  padding: 1% 3%;
+}
+@media (min-width: 370px) {
+  header nav a:hover {
+    padding: 5%;
+  }
 }
 footer {
   height: 10%;
