--- a/css/index.css
+++ b/css/index.css
@@ -296,12 +296,16 @@ main .top-content .background-cont .overlay-cont button {
   margin: 2%;
   padding: 2%;
   border-radius: 10px;
-  color: white;
   background: #94c9a9;
   font-size: 1.3rem;
 }
 main .top-content .background-cont .overlay-cont button:hover {
   cursor: pointer;
+  border: 2px solid white;
+}
+main .top-content .background-cont .overlay-cont button a {
+  text-decoration: none;
+  color: white;
 }
 main .top-content .why-cont {
   width: 90%;
