--- a/less/project.less
+++ b/less/project.less
@@ -54,11 +54,15 @@ main {
           margin: 2%;
           padding: 2%;
           border-radius: 10px;
-          color: white;
           background: @bg-lite;
           font-size: 1.3rem;
           &:hover {
             cursor: pointer;
+            border: 2px solid white;
+          }
+          a {
+            text-decoration: none;
+            color: white;
           }
         }
       }
